Converted ArrayList to JSON using GSON in Server2. Added dependencies to pom.xml. Created a Json function that returns an object in scrip2.js.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,9 +10,10 @@
   </head>
 <body>
 
+    <button onclick="showServerText()"> This is a button </button>
     <p id="head-container"></p>
     <p>Click <a href="/head">here</a> to see the server response directly.</p>
-    
+
     <div class="pimg1">
       <div class="ptext">
         <span class="border trans">
