--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -102,8 +102,18 @@
                        <div class="pimg4"> 
                              <div class="ptext"> 
                                   <span class="border trans">
-                                         Thank You for Visiting!!!              
+                                         Please Enter Your Contact             
                                   </span>
+                                <form action="/form-handler" method="POST">
+                                    <label for="firstName">First name:</label>
+                                    <input type="text" id="firstName" name="firstName"><br><br>
+                                    <label for="lastName">Last name:</label>
+                                    <input type="text" id="lastName" name="lastName"><br><br>
+                                    <label for="email"> Email:</label>
+                                    <input type="email" id="email" name="email"</input>
+                                    <br>
+                                <input type="submit" />
+                                </form>
                              <!-- Footer -->
                                   <footer>
                                     <div class="inner-width">
